<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.EditPageActivity">

        <com.example.bunnyworld.view.ShapeDrawingView
            android:id="@+id/shapeDrawingView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_frame_paint"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/selectModeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:checkedButton="@id/addButton"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/selectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/select_radio" />

                <RadioButton
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/add_radio" />

                <RadioButton
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/delete_radio" />

            </RadioGroup>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                android:text="@string/save_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/X_text" />

                    <EditText
                        android:id="@+id/inputX"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Y_text" />

                    <EditText
                        android:id="@+id/inputY"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Width_text" />

                    <EditText
                        android:id="@+id/inputWidth"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Height_text" />

                    <EditText
                        android:id="@+id/inputHeight"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/showButton"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:padding="0dp"
                android:text="Show"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/input_name_text"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/inputShapeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_name_hint_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/movableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:textSize="18sp"
                android:text="@string/movable_checkBox" />

            <CheckBox
                android:id="@+id/visibleCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/visible_checkBox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/image_name_text"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/imageChoosingSpinner"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:entries="@array/triggerSpinnerClass" />

            <Button
                android:id="@+id/browseButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:backgroundTint="#858585"
                android:text="···"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/originalCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="Original" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp" >

        <Button
            android:id="@+id/customDrawingButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:text="@string/draw_custom_image_button"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/text_text"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/inputText"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/input_text" />

            <Spinner
                android:id="@+id/fontSizeSpinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:entries="@array/fontSizeSpinnerClass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/script_text"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/shiftButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/go_to_script_assembler_button"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
