<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CustomDrawingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_frame_paint" >

            <com.example.bunnyworld.view.CustomDrawingView
                android:id="@+id/customDrawingView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/brushRubberRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/brushRadio"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/brushRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/brush_button"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/rubberRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/rubber_button"
                    android:textSize="18sp" />

            </RadioGroup>

            <Button
                android:id="@+id/savePNGButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/save_button"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_text"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/colorSpinner"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:entries="@array/colorSpinnerClass"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thickness_text"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/thicknessSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/thicknessSpinnerClass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_file_name_text"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/imageFileNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>