<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <CheckBox
        android:id="@+id/selectGameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center|start"/>

    <TextView
        android:id="@+id/gameNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Game name"
        android:textSize="26dp"
        android:layout_marginLeft="45dp"
        android:layout_gravity="center|start"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center|end">

        <Button
            android:id="@+id/editGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="2dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/edit_button"/>

        <Button
            android:id="@+id/playGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="2dp"
            android:backgroundTint="#D8772E"
            android:text="@string/play_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/renameGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginHorizontal="2dp"
        android:text="@string/rename_button"
        android:visibility="invisible"/>

</FrameLayout>