<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditShapeScriptActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/layout_frame_paint">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/script_assembler_text"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/script_trigger_text"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/triggerSpinner"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:entries="@array/triggerSpinnerClass" />

            <Spinner
                android:id="@+id/triggerExtendedSpinner"
                android:layout_width="130dp"
                android:layout_height="40dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/script_action_text"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/actionSpinner"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:entries="@array/actionSpinnerClass"/>

            <Spinner
                android:id="@+id/actionTargetSpinner"
                android:layout_width="130dp"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/browseSoundButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="0dp"
                android:backgroundTint="#858585"
                android:text="···"
                android:textSize="18sp"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/addScriptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/add_script_button" />


    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="#FF0000"
        android:text="@string/clear_all_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/layout_frame_paint">

        <TextView
            android:id="@+id/scriptDisplayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No scripts added."
            android:textSize="20sp" />

    </LinearLayout>



</LinearLayout>